# home-finance-manager-user-account-management-service

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.docker/: .env.dist  Dockerfile  docker-compose.yml  entrypoint.sh
.github/workflows/: uams-ci.yml
src/: manage.py
src/accounts/: urls.py  views.py
src/core/: settings.py
src/core/settings/: settings.py  settings_ci.py
