[tool.poetry]
name = "hfm-user-managament-service"
version = "0.1.0"
description = ""
authors = ["stanislaw <stanislaw.kochanski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
